--- a/paginas/comics.html
+++ b/paginas/comics.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <meta name="description" content="Encontrá tus comics favoritos en XEROX a los mejores precios. Envios a todo el país.">
-    <meta name="keywords" content="comic, comics, marvel, marvel comics, dc, dc comics, batman, batman comics, justice league comics, liga de la justicia, liga de la justicia comics, avengers, avengers comics, vengadores, vengadores comics">
+    <meta name="description"
+        content="Encontrá tus comics favoritos en XEROX a los mejores precios. Envios a todo el país.">
+    <meta name="keywords"
+        content="comic, comics, marvel, marvel comics, dc, dc comics, batman, batman comics, justice league comics, liga de la justicia, liga de la justicia comics, avengers, avengers comics, vengadores, vengadores comics">
     <title>XEROX | Comics</title>
 </head>
 
@@ -51,6 +53,9 @@
                     </div>
                     <ul class="navbar-nav me-auto">
                         <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                            <a href="./novedades.html">NOVEDADES</a>
+                        </li>
+                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                             <a href="./contactos.html">CONTACTOS</a>
                         </li>
                     </ul>
@@ -74,8 +79,7 @@
 
             <div class="lista">
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/Avengers_Vol_1_1.webp" class="card-img-top"
-                        alt="avengers portada">
+                    <img src="../img/Avengers_Vol_1_1.webp" class="card-img-top" alt="avengers portada">
                     <div class="card-body">
                         <h5 class="card-title">Avengers #1</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button"
@@ -83,7 +87,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
                                     que
@@ -129,7 +133,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample1">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
                                     que
@@ -167,8 +171,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/clean.jpg" class="card-img-top"
-                        alt="spiderman portada">
+                    <img src="../img/clean.jpg" class="card-img-top" alt="spiderman portada">
                     <div class="card-body">
                         <h5 class="card-title">The Amazing Spider-Man #1</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button"
@@ -176,7 +179,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample2">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
                                     que
@@ -214,8 +217,7 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/TMNT_001_29.webp" class="card-img-top"
-                        alt="TMNT portada">
+                    <img src="../img/TMNT_001_29.webp" class="card-img-top" alt="TMNT portada">
                     <div class="card-body">
                         <h5 class="card-title">TMNT #1</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample3" role="button"
@@ -223,7 +225,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample3">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
                                     que
@@ -269,7 +271,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample4">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     Por primera vez, el origen del Joker es revelado en esta historia de locura y
                                     perseverancia humana. Buscando probar que cualquier hombre puede ser empujado mas
