--- a/paginas/manga.html
+++ b/paginas/manga.html
@@ -53,6 +53,9 @@
                     </div>
                     <ul class="navbar-nav me-auto">
                         <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                            <a href="./novedades.html">NOVEDADES</a>
+                        </li>
+                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                             <a href="./contactos.html">CONTACTOS</a>
                         </li>
                     </ul>
@@ -85,7 +88,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     La historia se centra en Light Yagami, cuya aburrida vida
                                     cambia radicalmente cuando se topa con un cuaderno que
@@ -116,8 +119,8 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample1">
-                            <div class="card card-body">
-                                <p class="card-text" style="max-width: 300px;">
+                            <div class="card card-body carDiv">
+                                <p class="card-text">
                                     Tomo recopilatorio que junta los tomos 1-3 de la aclamada obra BLEACH, la cual
                                     cuenta la historia de Ichigo Kurosaki y su travesía para volverse más fuerte y
                                     proteger a sus amigos.
@@ -139,7 +142,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample2">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
                                     que
@@ -185,7 +188,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample3">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
                                     que
@@ -231,7 +234,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample4">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
                                     que
