--- a/paginas/novedades.html
+++ b/paginas/novedades.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <meta name="description" content="Encontrá tu colección favorita de cartas en XEROX a los mejores precios. Envios a todo el país.">
-    <meta name="keywords" content="Yugioh, yugioh deck, deck, magic, magic the gathering, pokemon cartas, pokemon card game, pokemon card">
+    <meta name="description"
+        content="Encontrá tu colección favorita de cartas en XEROX a los mejores precios. Envios a todo el país.">
+    <meta name="keywords"
+        content="Yugioh, yugioh deck, deck, magic, magic the gathering, pokemon cartas, pokemon card game, pokemon card">
     <title>XEROX | Juegos de Cartas</title>
 </head>
 
@@ -71,124 +73,62 @@
                 </ol>
             </nav>
 
-            <section class="banner3">
-                <p>JUEGOS DE CARTAS</p>
+            <section class="banner4">
+                <p>NOVEDADES</p>
             </section>
 
-            <div class="lista">
-                <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/sp_n1McLdPFBg.png" class="card-img-top"
-                        alt="magic the gathering portada">
-                    <div class="card-body">
-                        <h5 class="card-title">Magic the Gathering Adventures on Forgotten Realms</h5>
-                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample">
-                    <div class="card card-body carDiv">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
+            <div class="lista1">
+                <div class="card text-center divLista cartaLista" style="width: 18rem;">
+                    <img src="../img/sp_n1McLdPFBg.png" class="card-img-top" alt="magic the gathering portada">
                 </div>
-                        <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
-                        </button>
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h2 class="card-title">Magic the Gathering</h2>
+                        <p class="card-text">Disfruta del famoso juego de cartas con su nuevo set "Adventures in
+                            Forgotten Realms".
+                        </p>
+                        <a href="#" class="btn btn-primary">Ver producto</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                        Hace 6 horas
                     </div>
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/ETCO_display_EN-600x600.jpg" class="card-img-top" alt="yugioh portada">
-                    <div class="card-body">
-                        <h5 class="card-title">YUGIOH Eternity Code</h5>
-                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample1">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
+                    <img src="../img/the-last-of-us-parte-i-202261012304123_1.jpg" class="card-img-top"
+                        alt="the last of us portada">
                 </div>
-                        <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
-                        </button>
+                <div class="card text-center ">
+                    <div class="card-body">
+                        <h2 class="card-title">The Last of Us Parte 1</h2>
+                        <p class="card-text">
+                            Remake del aclamado juego de Naughty Dog, el cual narra el viaje de Joel y Ellie por
+                            todo Estados Unidos con la esperanza de lograr conseguir una cura para la epidemia
+                            que arrasó su mundo y convirtió a las personas en zombies.
+                        </p>
+                        <a href="#" class="btn btn-primary">Ver producto</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                        Hace 1 día
                     </div>
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/PKM_SWSH09-Booster-Display_EN-600-600x600.jpg" class="card-img-top"
-                        alt="pokemon portada">
-                    <div class="card-body">
-                        <h5 class="card-title">Pokemon Card Game</h5>
-                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample2">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
+                    <img src="../img/bleachremix011-db5742e66babce6afa16730621958737-640-0.webp" class="card-img-top"
+                        alt="bleach portada">
                 </div>
-                        <button type="button" class="btn btn-outline-primary">
-                            <a href="">$1500</a>
-                        </button>
+                <div class="card text-center">
+                    <div class="card-body">
+                        <h2 class="card-title">Bleach Remix #1</h2>
+                        <p class="card-text">
+                            Tomo recopilatorio que junta los tomos 1-3 de la aclamada obra BLEACH, la cual
+                            cuenta la historia de Ichigo Kurosaki y su travesía para volverse más fuerte y
+                            proteger a sus amigos.
+                        </p>
+                        <a href="#" class="btn btn-primary">Ver producto</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                        Hace 3 días
                     </div>
                 </div>
             </div>
