--- a/paginas/videojuegos.html
+++ b/paginas/videojuegos.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <meta name="description" content="Encontrá tus videojuegos favoritos en XEROX a los mejores precios. Envios a todo el país.">
+    <meta name="description"
+        content="Encontrá tus videojuegos favoritos en XEROX a los mejores precios. Envios a todo el país.">
     <meta name="keywords" content="PS4, PS5, FIFA, call of duty, juegos, videojuegos, playstation">
     <title>XEROX | Videojuegos</title>
 </head>
@@ -51,6 +52,9 @@
                     </div>
                     <ul class="navbar-nav me-auto">
                         <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                            <a href="./novedades.html">NOVEDADES</a>
+                        </li>
+                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                             <a href="./contactos.html">CONTACTOS</a>
                         </li>
                     </ul>
@@ -79,33 +83,41 @@
                     <div class="card-body">
                         <h5 class="card-title">Elden Ring</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample">
+                            <div class="card card-body carDiv">
+                                <p class="card-text">
+                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
+                                    que
+                                    lleva
+                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
+                                    podrido.
+                                    Todo
+                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
+                                    confiere
+                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
+                                    visualiza
+                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
+                                    no se
+                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
+                                    todo aquel
+                                    que
+                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
+                                    origen del
+                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
+                                    acciones
+                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
+                                    descubrir su
+                                    verdadera identidad.
+                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
+                                    2003 y
+                                    2006,
+                                    totalizando 12 tomos.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
@@ -117,33 +129,41 @@
                     <div class="card-body">
                         <h5 class="card-title">God of War Ragnarok</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample1">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample1">
+                            <div class="card card-body carDiv">
+                                <p class="card-text">
+                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
+                                    que
+                                    lleva
+                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
+                                    podrido.
+                                    Todo
+                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
+                                    confiere
+                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
+                                    visualiza
+                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
+                                    no se
+                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
+                                    todo aquel
+                                    que
+                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
+                                    origen del
+                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
+                                    acciones
+                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
+                                    descubrir su
+                                    verdadera identidad.
+                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
+                                    2003 y
+                                    2006,
+                                    totalizando 12 tomos.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
@@ -151,38 +171,46 @@
                 </div>
 
                 <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/horizon-forbidden-west-ps41-f7a81ec08dff386fe216451392749344-640-0.webp" class="card-img-top"
-                        alt="horizon portada">
+                    <img src="../img/horizon-forbidden-west-ps41-f7a81ec08dff386fe216451392749344-640-0.webp"
+                        class="card-img-top" alt="horizon portada">
                     <div class="card-body">
                         <h5 class="card-title">Horizon Forbidden West</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample2">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample2">
+                            <div class="card card-body carDiv">
+                                <p class="card-text">
+                                    La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón
+                                    que
+                                    lleva
+                                    una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar
+                                    podrido.
+                                    Todo
+                                    cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
+                                    confiere
+                                    poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se
+                                    visualiza
+                                    mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si
+                                    no se
+                                    especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a
+                                    todo aquel
+                                    que
+                                    está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el
+                                    origen del
+                                    cuaderno, quién era su anterior portador, y la trama de consecuencias que sus
+                                    acciones
+                                    desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
+                                    descubrir su
+                                    verdadera identidad.
+                                    Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre
+                                    2003 y
+                                    2006,
+                                    totalizando 12 tomos.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
@@ -199,8 +227,8 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample3">
-                            <div class="card card-body">
-                                <p class="card-text" style="max-width: 300px;">
+                            <div class="card card-body carDiv">
+                                <p class="card-text">
                                     Remake del aclamado juego de Naughty Dog, el cual narra el viaje de Joel y Ellie por
                                     todo Estados Unidos con la esperanza de lograr conseguir una cura para la epidemia
                                     que arrasó su mundo y convirtió a las personas en zombies.
@@ -223,7 +251,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample4">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     EA SPORTS™ trae la nueva entrega de El Juego de Todos al campo con los
                                     torneos de la Copa Mundial de la FIFA™ masculina y femenina, la incorporación de
