--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     Remake del aclamado juego de Naughty Dog, el cual narra el viaje de Joel y Ellie por
                                     todo Estados Unidos con la esperanza de lograr conseguir una cura para la epidemia
@@ -157,7 +157,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample1">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     Tomo recopilatorio que junta los tomos 1-3 de la aclamada obra BLEACH, la cual
                                     cuenta la historia de Ichigo Kurosaki y su travesía para volverse más fuerte y
@@ -180,7 +180,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample2">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     Por primera vez, el origen del Joker es revelado en esta historia de locura y
                                     perseverancia humana. Buscando probar que cualquier hombre puede ser empujado mas
@@ -205,7 +205,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample3">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     EA SPORTS™ trae la nueva entrega de El Juego de Todos al campo con los
                                     torneos de la Copa Mundial de la FIFA™ masculina y femenina, la incorporación de
@@ -229,7 +229,7 @@
                             Leer info.
                         </a>
                         <div class="collapse" id="collapseExample4">
-                            <div class="card card-body">
+                            <div class="card card-body carDiv">
                                 <p class="card-text" style="max-width: 300px;">
                                     La historia se centra en Light Yagami, cuya aburrida vida
                                     cambia radicalmente cuando se topa con un cuaderno que
