--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -51,6 +51,9 @@
                     </div>
                     <ul class="navbar-nav me-auto">
                         <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
+                            <a href="./novedades.html">NOVEDADES</a>
+                        </li>
+                        <li class="xeroxLista col-lg-2 col-md-3 col-sm-4">
                             <a href="./contactos.html">CONTACTOS</a>
                         </li>
                     </ul>
