--- a/paginas/juegosdecartas.html
+++ b/paginas/juegosdecartas.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <meta name="description" content="Encontrá tu colección favorita de cartas en XEROX a los mejores precios. Envios a todo el país.">
-    <meta name="keywords" content="Yugioh, yugioh deck, deck, magic, magic the gathering, pokemon cartas, pokemon card game, pokemon card">
+    <meta name="description"
+        content="Encontrá tu colección favorita de cartas en XEROX a los mejores precios. Envios a todo el país.">
+    <meta name="keywords"
+        content="Yugioh, yugioh deck, deck, magic, magic the gathering, pokemon cartas, pokemon card game, pokemon card">
     <title>XEROX | Juegos de Cartas</title>
 </head>
 
@@ -76,116 +78,64 @@
             </section>
 
             <div class="lista">
-                <div class="card text-center divLista" style="width: 18rem;">
-                    <img src="../img/sp_n1McLdPFBg.png" class="card-img-top"
-                        alt="magic the gathering portada">
+                <div class="card text-center divLista cartaLista" style="width: 18rem;">
+                    <img src="../img/sp_n1McLdPFBg.png" class="card-img-top" alt="magic the gathering portada">
                     <div class="card-body">
-                        <h5 class="card-title">Magic the Gathering Adventures on Forgotten Realms</h5>
+                        <h5 class="card-title">Magic the Gathering</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample">
-                    <div class="card card-body carDiv">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample">
+                            <div class="card card-body carDiv">
+                                <p class="card-text">Disfruta del famoso juego de cartas con su nuevo set "Adventures in
+                                    Forgotten Realms".
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
                     </div>
                 </div>
 
-                <div class="card text-center divLista" style="width: 18rem;">
+                <div class="card text-center divLista cartaLista" style="width: 18rem;">
                     <img src="../img/ETCO_display_EN-600x600.jpg" class="card-img-top" alt="yugioh portada">
                     <div class="card-body">
                         <h5 class="card-title">YUGIOH Eternity Code</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample1" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample1">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample1">
+                            <div class="card card-body carDiv">
+                                <p class="card-text">
+                                    Ya está a la venta el último Booster Pack del famoso juego de cartas YUGIOH, inspirado en el anime de YUGIOH: VRAINZ.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
                     </div>
                 </div>
 
-                <div class="card text-center divLista" style="width: 18rem;">
+                <div class="card text-center divLista cartaLista" style="width: 18rem;">
                     <img src="../img/PKM_SWSH09-Booster-Display_EN-600-600x600.jpg" class="card-img-top"
                         alt="pokemon portada">
                     <div class="card-body">
                         <h5 class="card-title">Pokemon Card Game</h5>
                         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Leer info.
-                    </a>
-                <div class="collapse" id="collapseExample2">
-                    <div class="card card-body">
-                        <p class="card-text" style="max-width: 300px;">
-                            La historia se centra en Light Yagami, uno de los mejores estudiantes de todo Japón que
-                            lleva
-                            una vida demasiado aburrida para sus estándares, y que juzga al mundo por estar podrido.
-                            Todo
-                            cambia radicalmente cuando se topa con un cuaderno (el que da nombre a la serie) que
-                            confiere
-                            poderes sobrenaturales a su portador: si se escribe el nombre de una persona y se visualiza
-                            mentalmente su rostro, esta morirá en la forma deseada (o de un ataque al corazón si no se
-                            especifica). Cuando Light confirma que es cierto, decide utilizarlo para matar a todo aquel
-                            que
-                            está corrompiendo al mundo, para liberarlo de toda maldad. Pronto descubrirtá el origen del
-                            cuaderno, quién era su anterior portador, y la trama de consecuencias que sus acciones
-                            desencadenarán. Por ejemplo, la aparición de L, un detective decidido a atraparlo y
-                            descubrir su
-                            verdadera identidad.
-                            Death Note se publicó originalmente en la revista Shonen Jump de Shueisha, entre 2003 y
-                            2006,
-                            totalizando 12 tomos.
-                        </p>
-                    </div>
-                </div>
+                            aria-expanded="false" aria-controls="collapseExample">
+                            Leer info.
+                        </a>
+                        <div class="collapse" id="collapseExample2">
+                            <div class="card card-body carDiv">
+                                <p class="card-text">
+                                    Laa nuevas cartas de Pokemon traen consigo a las nuevas versiones de Shaymin, Charizard, Whimsicott y Arceus. Despliega y explora el poder de los nuevos V-Stars.
+                                </p>
+                            </div>
+                        </div>
                         <button type="button" class="btn btn-outline-primary">
                             <a href="">$1500</a>
                         </button>
