cambio de banner en novedades

--- a/paginas/novedades.html
+++ b/paginas/novedades.html
@@ -10,8 +10,8 @@
     <meta name="description"
         content="Encontrá tu colección favorita de cartas en XEROX a los mejores precios. Envios a todo el país.">
     <meta name="keywords"
-        content="Yugioh, yugioh deck, deck, magic, magic the gathering, pokemon cartas, pokemon card game, pokemon card">
-    <title>XEROX | Juegos de Cartas</title>
+        content="novedades, nuevo, ofertas, juegos nuevos, new">
+    <title>XEROX | Novedades</title>
 </head>
 
 <body>
