edición de breadcrumb

--- a/paginas/novedades.html
+++ b/paginas/novedades.html
@@ -69,7 +69,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Cartas</li>
+                    <li class="breadcrumb-item active" aria-current="page">Novedades</li>
                 </ol>
             </nav>
 
